<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.codepath.simpletodo.dialog.EditTodoDialog">

    <EditText
        android:id="@+id/editTextItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textViewDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextItem"
        android:text="@string/edit_item_due_date"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/buttonDueDate"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewDueDate"
        android:text="@string/none"/>

    <TextView
        android:id="@+id/textViewPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonDueDate"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_item_priority"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPriority"
        android:layout_marginBottom="20dp"
        android:drawSelectorOnTop="true"/>

    <Button
        android:id="@+id/buttonEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerPriority"
        android:onClick="onSaveItem"
        android:text="@string/save"/>

</RelativeLayout>
